--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-linear-gradient": "^11.0.0",
     "expo-status-bar": "~1.2.0",
+    "hex-to-rgba": "^2.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-circular-progress": "^1.3.7",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "^0.30.1",
+    "react-native-screens": "^3.10.2",
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
